打包编译门户 js

--- a/portal/chat.css
+++ b/portal/chat.css
@@ -93,7 +93,7 @@
     padding: 12px 16px;
 }
 .chat_main .chat_history .chat_history_custom {
-    position: relative;
+    position: relative;s
     float: right;
     width: 70%;
     margin-bottom: 20px;
