--- a/src/views/chat/StaffChat.scss
+++ b/src/views/chat/StaffChat.scss
@@ -135,14 +135,9 @@
             border-radius: 4px;
             word-break: break-all;
 
-            &.img-msg {
-              padding: 0;
-              border-radius: 0;
-
-              img {
-                width: 100%;
-              }
-            }
+          }
+          .img-msg {
+            max-width: 100%;
           }
 
           .title {
