Feat:处理文字不换行的问题

--- a/portal-v/chat.css
+++ b/portal-v/chat.css
@@ -91,9 +91,10 @@
 .chat_main .chat_history .msg {
     border-radius: 2px;
     padding: 12px 16px;
+    word-break: break-all;
 }
 .chat_main .chat_history .chat_history_custom {
-    position: relative;s
+    position: relative;
     float: right;
     width: 70%;
     margin-bottom: 20px;
