--- a/portal/chat.css
+++ b/portal/chat.css
@@ -115,6 +115,7 @@
     border-radius: 2px;
     padding: 12px 16px;
     display: inline-block;
+    word-break: break-all;
 }
 .chat_main .chat_history .chat_history_custom {
     position: relative;
