--- a/portal/chat.css
+++ b/portal/chat.css
@@ -117,6 +117,7 @@
     padding: 12px 16px;
     display: inline-block;
     word-break: break-all;
+    text-align: left;
 }
 .chat_main .chat_history .chat_history_custom {
     position: relative;
