--- a/portal/chat.css
+++ b/portal/chat.css
@@ -162,6 +162,20 @@
     top: 5px;
     left: 5px;
 }
+
+.chat_main .chat_history .splice_line {
+    position: relative;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+}
+.chat_main .chat_history .splice_line span {
+    position: relative;
+    background: #F8F8F8;
+    z-index: 2;
+    padding: 6px;
+}
+
 /* 聊天主窗口-聊天输入 */
 .chat_main .chat_attachment {
     display: flex;
