--- a/src/views/chat/StaffChat.html
+++ b/src/views/chat/StaffChat.html
@@ -37,32 +37,37 @@
             <div class="chat-history" ref="chatHistory">
                 <template v-for="(message, index) in current.messages">
                     <div :key="index">
-                        <div class="splice_line" v-if="handleSpliceLine(message, current.messages, index)">
-                            <span>{{message.spliceTime}}</span>
+                        <div class="splice_line" v-if="message.contentType == 10">
+                            <span>连接已断开</span>
                         </div>
-                        <div class="column"
-                            :class="{'service': message.sendUserType == 1, 'custom': message.sendUserType != 1 }">
-                            <template v-if="message.sendUserType == 1">
-                                <div class="service-info">
-                                    <div class="title">我 {{ message.gmtCreate | date('HH:mm:ss') }}</div>
-                                    <img v-if="message.contentType == 2" class="service-msg img-msg" :src="message.content" @click="zoomImage(message.content)">
-                                    <div v-else class="service-msg msg" v-html="message.content"></div>
-                                </div>
-                                <img class="avatar-img" src="/images/logo.jpg">
-                            </template>
-                            <template v-else>
-                                <img class="avatar-img" src="/images/custom.png">
-                                <div class="custom-info">
-                                    <div class="title">
-                                        {{ current.otherSideName ? current.otherSideName : '访客' }}
-
-                                        {{ message.gmtCreate | date('HH:mm:ss') }}
+                        <template v-if="message.contentType == 1 || message.contentType == 2">
+                            <div class="splice_line" v-if="handleSpliceLine(message, current.messages, index)">
+                                <span>{{message.spliceTime}}</span>
+                            </div>
+                            <div class="column"
+                                :class="{'service': message.sendUserType == 1, 'custom': message.sendUserType != 1 }">
+                                <template v-if="message.sendUserType == 1">
+                                    <div class="service-info">
+                                        <div class="title">我 {{ message.gmtCreate | date('HH:mm:ss') }}</div>
+                                        <img v-if="message.contentType == 2" class="service-msg img-msg" :src="message.content" @click="zoomImage(message.content)">
+                                        <div v-else class="service-msg msg" v-html="message.content"></div>
                                     </div>
-                                    <img class="custom-msg img-msg" v-if="message.contentType == 2":src="message.content" @click="zoomImage(message.content)">
-                                    <div v-else class="custom-msg msg" v-html="message.content"></div>
-                                </div>
-                            </template>
-                        </div>
+                                    <img class="avatar-img" src="/images/logo.jpg">
+                                </template>
+                                <template v-else>
+                                    <img class="avatar-img" src="/images/custom.png">
+                                    <div class="custom-info">
+                                        <div class="title">
+                                            {{ current.otherSideName ? current.otherSideName : '访客' }}
+
+                                            {{ message.gmtCreate | date('HH:mm:ss') }}
+                                        </div>
+                                        <img class="custom-msg img-msg" v-if="message.contentType == 2":src="message.content" @click="zoomImage(message.content)">
+                                        <div v-else class="custom-msg msg" v-html="message.content"></div>
+                                    </div>
+                                </template>
+                            </div>
+                        </template>
                     </div>
                 </template>
             </div>
