--- a/portal/chat.css
+++ b/portal/chat.css
@@ -245,7 +245,6 @@
     font-size: 14px;
     font-weight: 100;
     width: 300px;
-    height: 150px;
     border-radius: 2px;
     overflow: hidden;
     box-shadow: 1px 1px 10px #ddd;
@@ -260,6 +259,21 @@
     background: #dbba7e;
     color: #fff;
 }
+.chat_record .chat_record_input {
+    margin: 10px;
+}
+.chat_record .chat_record_input label{
+    margin-right: 10px;
+}
+.chat_record .chat_record_input input{
+    padding: 6px;
+    width: 200px;
+}
+.chat_record .chat_record_input p.error{
+    font-size: 12px;
+    margin: 5px 0;
+    color: #ff0000;
+}
 .chat_record .chat_record_header .cancel{
     float: right;
     cursor: pointer;
@@ -268,7 +282,7 @@
 }
 .chat_record .chat_record_area {
     outline: none;
-    height: 40%;
+    height: 150px;
     overflow-y: auto;
     overflow-x: hidden;
     margin: 5px;
